--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
 	font-size: 17px;
 	color:White;
 	font-family: 'Lakki Reddy', cursive;
@@ -16,4 +16,5 @@ body {
     font-family: 'Lakki Reddy', cursive;
     color:#d8bfd8;
     text-decoration: underline;
-    }
+    } 
+*/
