--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-/* body {
-	font-size: 17px;
-	color:White;
+body, p {
+	font-size: 25px;
+	color:white;
 	font-family: 'Lakki Reddy', cursive;
     background-color: black;
   	background-image: url(../images/crystal_ball.png); 
@@ -9,12 +9,36 @@
     background-position: right;
     background-size: 500px, 350px;
     margin-top: 0%;
-    text-align: left;
+   
   }
   
-  h1{
+  #game {
+    font-size: 25px;
+	color:white;
+	font-family: 'Lakki Reddy', cursive;
+  	background-repeat: no-repeat;
+    margin-top: 15%;
+    text-align: center;
+    width: 50%
+    
+
+  }
+  
+  h1 {
     font-family: 'Lakki Reddy', cursive;
     color:#d8bfd8;
-    text-decoration: underline;
+    text-align: center ;
     } 
-*/
+    
+
+h6 {
+     color:#d8bfd8;
+     text-align: center ;
+     margin-top: 100px;
+     font-size: 55px;
+}
+
+section {
+    width: 50%;
+    text-align: center;
+}
