--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,16 @@
-body, p {
-	font-size: 25px;
-	color:white;
-	font-family: 'Lakki Reddy', cursive;
+body{
     background-color: black;
   	background-image: url(../images/crystal_ball.png); 
   	background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: right;
-    background-size: 500px, 350px;
+    background-size: 50%, 25%;
     margin-top: 0%;
-   
-  }
+}
+  p {
+	font-size: 30px;
+	color:white;
+	font-family:'Indie Flower', cursive;}
   
   #game {
     font-size: 25px;
@@ -28,14 +28,24 @@ body, p {
     font-family: 'Lakki Reddy', cursive;
     color:#d8bfd8;
     text-align: center ;
-    } 
-    
+    font-size: 30px;
+    margin-bottom: 20px;
+    }
+     
+#ready{
+    margin-top:25%;
+    margin-bottom: 20px;
+}
+
+h4 {
+   margin-top: 100px; 
+}    
 
 h6 {
-     color:#d8bfd8;
+     color:#ba55d3	;
      text-align: center ;
-     margin-top: 100px;
      font-size: 55px;
+     font-family: 'Lakki Reddy', cursive;
 }
 
 section {
