--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,9 @@ body{
 	color:white;
 	font-family: 'Lakki Reddy', cursive;
   	background-repeat: no-repeat;
-    margin-top: 15%;
+    margin-top: 100px;
     text-align: center;
-    width: 50%
+    width: 50%;
     
 
   }
@@ -33,7 +33,7 @@ body{
     }
      
 #ready{
-    margin-top:25%;
+    margin-top:15%;
     margin-bottom: 20px;
 }
 
